Fix header on mobile (#188)
* Use a saner layout for docs pages, with article as the body, and fixed elements with position fixed
* Fix two images with dubious (though working) URL; remove a confusing CSS class
* Hide Back-to-Grist link in header on small screens
* Little hack to hide title (leaving only logo) when it doesn't fit

--- a/help/css/grist.css
+++ b/help/css/grist.css
@@ -337,6 +337,10 @@ body {
   margin-bottom: 15px;
 }
 
+.wm-page-content iframe {
+  max-width: 100%;
+}
+
 /*
  * This makes code samples look more like 'readthedocs' theme.
  */
@@ -367,6 +371,7 @@ body {
   width: unset;
   height: 48px;
   color: initial;
+  white-space: normal;
 }
 
 .wm-top-link, .wm-top-link:hover, .wm-top-link:active, .wm-top-link:visited, .wm-top-link:focus {
